Fix Chrome OS tab discard regression

https://crrev.com/c/980742 replaces EstimatedMemoryFreedKB() with
GetEstimatedMemoryFreedOnDiscardKB() which always returns 0. It confuses
Chrome OS Tab Manager and all tabs except the front tab are discarded.
It's a quick fix to make tab discard work on Chrome OS.

Bug: 832517
Change-Id: Ic72be7a7535bf6e0a48a6f6efa9afc28635813c8
Reviewed-on: https://chromium-review.googlesource.com/1011885
Commit-Queue: François Doray <fdoray@chromium.org>
Reviewed-by: Cheng-Yu Lee <cylee@google.com>
Reviewed-by: François Doray <fdoray@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550602}
Former-commit-id: 8901493d98ea26516d5e794e5afba6f45d204c3d